--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 .DS_Store
+node_modules
+/website/docs/.vuepress/dist/
+/website/npm
+/website/.deploy.js
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
